--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
   <header>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="js/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="js/resume.js"></script>
+    <link href="portfolio.css" rel="stylesheet">
   </header>
   <body ng-app="Portfolio">
     <div class="col-md-6 col-md-offset-3" ng-controller="ResumeController">
@@ -19,38 +21,35 @@
       <!--  Contact Me -->
       <div class="row">
           <div class="row">
-            <h2 style="text-align: center;"> 	&lt; contact me &gt; </h2>
+            <h2 class="sub-title">Contact Me</h2>
           </div>
           <div class="row">
             <p style="text-align: center;"> {{ email }} </p>
-          </div>
-          <div class="row">
-            <span class="glyphicon glyphicon-star col-md-offset-6" aria-hidden="true"></span>
           </div>
       </div>
       <!--  About Me -->
       <div class="row">
           <div class="row">
-            <h2 style="text-align: center;"> 	&lt; about me &gt; </h2>
+            <h2 class="sub-title">About Me</h2>
           </div>
           <div class="row">
             <p style="text-align: center;"> {{ aboutMe }} </p>
-          </div>
-          <div class="row">
-            <span class="glyphicon glyphicon-star col-md-offset-6" aria-hidden="true"></span>
           </div>
       </div>
       <!-- Experience -->
       <div class="row">
         <div class="row">
-          <h2 style="text-align: center;"> 	&lt; experience &gt; </h2>
+          <h2 class="sub-title">Experience</h2>
         </div>
         <div class="row">
-          <div class="col-md-6" ng-repeat="experience in experiences">
+          <div class="col-md-12" ng-repeat="experience in experiences">
             <div class="panel panel-default">
-              <div class="panel-heading">{{ experience.name }}</div>
+              <div class="panel-heading">
+                {{ experience.name }} | {{ experience.title }}
+                <strong style="float:right;">{{ experience.year }}</strong>
+              </div>
               <div class="panel-body">
-                {{ experience.year }}
+                {{ experience.desc }}
               </div>
             </div>
           </div>
@@ -59,7 +58,7 @@
       <!--Skills-->
       <div class="row">
         <div class="row">
-          <h2 style="text-align: center;"> 	&lt; Skills &gt; </h2>
+          <h2 class="sub-title">Skills</h2>
         </div>
         <div class="row">
           <div class="col-md-6" ng-repeat="skill in skills">
@@ -75,12 +74,11 @@
       <!--Projects-->
       <div class="row">
         <div class="row">
-          <h2 style="text-align: center;"> 	&lt; projects &gt; </h2>
+          <h2 class="sub-title">Projects</h2>
         </div>
         <div class="row">
           <div class="col-md-12">
             <div class="panel panel-default">
-              <div class="panel-heading">Projects</div>
               <!-- Table -->
               <table class="table">
                 <tr ng-repeat="project in projects">
@@ -95,7 +93,7 @@
       <!--Education-->
       <div class="row">
         <div class="row">
-          <h2 style="text-align: center;"> 	&lt; education &gt; </h2>
+          <h2 class="sub-title">Education</h2>
         </div>
         <div class="row">
           <div class="col-md-6" ng-repeat="course in courses">
@@ -111,9 +109,6 @@
       <!--Reputation-->
       <div class="row">
         <div class="row">
-          <span class="glyphicon glyphicon-star col-md-4" aria-hidden="true"></span>
-          <span class="glyphicon glyphicon-star col-md-4" aria-hidden="true"></span>
-          <span class="glyphicon glyphicon-star col-md-4" aria-hidden="true"></span>
         </div>
       </div>
     </div>
