--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!--  Contact Me -->
       <div class="row">
           <div class="row">
-            <h2 class="sub-title">Contact Me</h2>
+            <h2 class="sub-title">Contact Me<h2>
           </div>
           <div class="row">
             <p style="text-align: center;"> {{ email }} </p>
@@ -78,14 +78,12 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="panel panel-default">
-              <!-- Table -->
-              <table class="table">
-                <tr ng-repeat="project in projects">
-                  <th>{{ project.name }}</th>
-                  <th>{{ project.desc }}</th>
-                </tr>
-              </table>
+            <div ng-repeat="project in projects" class="panel panel-default">
+              <div class="panel-heading"><a href={{project.link}}>{{ project.name }}</a></div>
+              <div class="panel-body">
+                {{ project.desc }}
+                <img src={{project.imgsrc}}></img>
+              </div>
             </div>
           </div>
         </div>
