--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <header>
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu|Indie+Flower|Lobster|Anton" rel="stylesheet">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="js/angular.js"></script>
     <script src="js/app.js"></script>
@@ -12,7 +12,7 @@
       <!--Title-->
       <div class="row jumbotron">
           <div class="row">
-            <h1 style="text-align: center;">{{ name }}</h1>
+            <h1 style="text-align: center; font-family: 'Lobster', cursive; font-size: 100px;">{{ name }}</h1>
           </div>
           <div class="row">
             <h2 style="text-align: center;">{{ title }}</h2>
@@ -109,8 +109,14 @@
         <div class="row">
         </div>
       </div>
+      <footer class="footer">
+           <div class="jumbotron row">
+               <div class="row">
+                 <h2 style="text-align: center;">Sup</h2>
+               </div>
+           </div>
+     </footer>
     </div>
-
-
   </body>
+
 </html>
